cropping fix

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ main:not(:first-child) {
     position: absolute;
     right: 0;
     bottom: 0;
-    min-width: 100vw;
+    width: 100vw;
     min-height: 100vh;
     z-index: -2;
     
